# swagger.json
@@ -43,7 +43,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "pokemonname": {
+                "name": {
                   "example": "Mewtwo"
                 },
                 "type": {
@@ -128,7 +128,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "pokemonname": {
+                "name": {
                   "example": "Mewtwo"
                 },
                 "type": {
